--- a/main/templates/users-profile.html
+++ b/main/templates/users-profile.html
@@ -289,7 +289,7 @@
             </a>
           </li>
           <li>
-            <a href="/projects/add">
+            <a href="/project/add">
               <i class="bi bi-circle"></i><span>Add Project steps</span>
             </a>
           </li>
@@ -319,7 +319,7 @@
       </li><!-- End Register Page Nav -->
 
       <li class="nav-item">
-        <a class="nav-link collapsed" href="/auth/signin">
+        <a class="nav-link collapsed" href="/auth/login">
           <i class="bi bi-box-arrow-in-right"></i>
           <span>Login</span>
         </a>
@@ -407,30 +407,14 @@
                     <div class="col-lg-9 col-md-8">Wendanyi Bridge</div>
                   </div>
 
-                  <!--<div class="row">
-                    <div class="col-lg-3 col-md-4 label">Job</div>
-                    <div class="col-lg-9 col-md-8">Web Designer</div>
-                  </div>
-
-                  <div class="row">
-                    <div class="col-lg-3 col-md-4 label">Country</div>
-                    <div class="col-lg-9 col-md-8">USA</div>
-                  </div>
-
-                  <div class="row">
-                    <div class="col-lg-3 col-md-4 label">Address</div>
-                    <div class="col-lg-9 col-md-8">A108 Adam Street, New York, NY 535022</div>
-                  </div>-->
+                  
 
                   <div class="row">
                     <div class="col-lg-3 col-md-4 label">Phone</div>
                     <div class="col-lg-9 col-md-8">0717748645</div>
                   </div>
 
-                  <!--<div class="row">
-                    <div class="col-lg-3 col-md-4 label">Email</div>
-                    <div class="col-lg-9 col-md-8">k.anderson@example.com</div>
-                  </div>-->
+                
                   <div class="card">
             <div class="card-body">
               <h5 class="card-title">Project Progress Bar</h5>
