--- a/main/templates/addnewform.html
+++ b/main/templates/addnewform.html
@@ -29,6 +29,8 @@
 
   
   <link href="{% static 'assets/css/style.css' %}" rel="stylesheet">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+
 
 </head>
 
@@ -198,20 +200,20 @@
               <a href="#">Show all messages</a>
             </li>
 
-          </ul><!-- End Messages Dropdown Items -->
+          </ul>
 
-        </li><!-- End Messages Nav -->
+        </li>
 
         <li class="nav-item dropdown pe-3">
 
           <a class="nav-link nav-profile d-flex align-items-center pe-0" href="#" data-bs-toggle="dropdown">
             <img src="{% static 'assets/img/profile-img.jpg' %}" alt="Profile" class="rounded-circle">
             <span class="d-none d-md-block dropdown-toggle ps-2">K. Anderson</span>
-          </a><!-- End Profile Iamge Icon -->
+          </a>
 
           <ul class="dropdown-menu dropdown-menu-end dropdown-menu-arrow profile">
             <li class="dropdown-header">
-              <h6>Kevin Anderson</h6>
+              <h6>Vince Muiruri</h6>
               <span>Web Designer</span>
             </li>
             <li>
@@ -238,12 +240,7 @@
               <hr class="dropdown-divider">
             </li>
 
-            <!-- <li>
-              <a class="dropdown-item d-flex align-items-center" href="pages-faq.html">
-                <i class="bi bi-question-circle"></i>
-                <span>Need Help?</span>
-              </a>
-            </li> -->
+
             <li>
               <hr class="dropdown-divider">
             </li>
@@ -255,15 +252,14 @@
               </a>
             </li>
 
-          </ul><!-- End Profile Dropdown Items -->
-        </li><!-- End Profile Nav -->
+          </ul>
+        </li>
 
       </ul>
-    </nav><!-- End Icons Navigation -->
+    </nav>
 
-  </header><!-- End Header -->
+  </header>
 
-  <!-- ======= Sidebar ======= -->
   <aside id="sidebar" class="sidebar">
 
     <ul class="sidebar-nav" id="sidebar-nav">
@@ -273,7 +269,7 @@
           <i class="bi bi-grid"></i>
           <span>Dashboard</span>
         </a>
-      </li><!-- End Dashboard Nav -->
+      </li>
 
    
       <li class="nav-item">
@@ -294,7 +290,7 @@
             </a>
           </li>
         </ul>
-      </li><!-- End Tables Nav -->
+      </li>
 
    
 
@@ -306,7 +302,7 @@
           <i class="bi bi-person"></i>
           <span>Profile</span>
         </a>
-      </li><!-- End Profile Page Nav -->
+      </li>
 
       
 
@@ -316,32 +312,32 @@
           <i class="bi bi-card-list"></i>
           <span>Register</span>
         </a>
-      </li><!-- End Register Page Nav -->
+      </li>
 
       <li class="nav-item">
-        <a class="nav-link collapsed" href="/auth/signin">
+        <a class="nav-link collapsed" href="/auth/login">
           <i class="bi bi-box-arrow-in-right"></i>
           <span>Login</span>
         </a>
-      </li><!-- End Login Page Nav -->
+      </li>
 
     
 
 
     </ul>
 
-  </aside><!-- End Sidebar-->
+  </aside>
   <main id="main" class="main">
 
     <div class="pagetitle">
-      <h1>Add New Form</h1>
+      <h1>Add Project Phases</h1>
       <nav>
         <ol class="breadcrumb">
           <li class="breadcrumb-item"><a href="/dashboard">Home</a></li>
          
         </ol>
       </nav>
-    </div><!-- End Page Title -->
+    </div>
     <section class="section">
       <div class="row">
     
@@ -351,31 +347,59 @@
           <div class="card">
             <div class="card-body">
               
-              <!-- Vertical Form -->
+              
               <form class="row g-3" method="post" id="add_new-form" novalidate>
                 {% csrf_token %}
                 <div class="col-12">
-                  <label for="inputNanme4" class="form-label">Step ID</label>
-                  <input type="text" class="form-control" id="inputNanme4">
+                  <label for="project_id" class="form-label">Select Project</label>
+                  <select class="form-control" name="project_id" id="project_id">
+                    <option value="">-- Select a Project --</option>
+                    {% for project in projects %}
+                    <option value="{{ project.project_id }}">{{ project.project_name }}</option>
+                    {% endfor %}
+                    
+                  </select>
                 </div>
                 <div class="col-12">
-                  <label for="inputEmail4" class="form-label">Project ID</label>
-                  <input type="email" class="form-control" id="inputEmail4">
+                  <label for="phase_number" class="form-label">Phase no:</label>
+                  <input type="number" name="phase_number"class="form-control" id="phase_number">
                 </div>
                 <div class="col-12">
-                  <label for="inputPassword4" class="form-label">Project Name</label>
-                  <input type="password" class="form-control" id="inputPassword4">
-                </div>
-                <div class="col-12">
-                  <label for="inputPassword4" class="form-label">Project Phase</label>
-                  <input type="password" class="form-control" id="inputPassword4">
+                  <label for="phase_name" class="form-label">Project Phase</label>
+                  <input type="text" name="phase_name" class="form-control" id="phase_name">
                 </div>
                 
+                  </select>
+                </div> 
+                
                 <div class="text-center">
-                  <button type="submit" class="btn btn-primary">Submit</button>
-                  <button type="reset" class="btn btn-secondary">Reset</button>
+                  <button type="submit" class="btn btn-primary  w-100" onclick="showSpinner()" onclick="validateDate()">Submit</button>
+
+                  <div class="d-flex justify-content-center align-items-center">
+                  
+                    <div id="spinner" class="spinner-border text-primary d-none ms-3" role="status">
+                     
+                        <span class="visually-hidden">Loading...</span>
+                    </div>
                 </div>
-              </form><!-- Vertical Form -->
+                  <button type="reset" class="btn btn-primary w-100" type="submit" style="margin-top: 20px;background-color: grey;border-color: grey;" onclick="hideSpinner()">Reset</button>
+                  
+                </div>
+                
+          
+              <script>
+                  function showSpinner() {
+                      document.getElementById("spinner").classList.remove("d-none");
+                  }
+                  function hideSpinner() {
+                      document.getElementById("spinner").classList.add("d-none");
+                  }
+              </script>
+                </div>
+
+                  
+                </div>
+              </form>
 
             </div>
           </div>
@@ -388,20 +412,18 @@
       </div>
     </section>
 
-  </main><!-- End #main -->
+  </main>
 
-  <!-- ======= Footer ======= -->
   <footer id="footer" class="footer">
     <div class="copyright">
       &copy; Copyright <strong><span>vince muiruri 2025</span></strong>. All Rights Reserved
     </div>
    
     
-  </footer><!-- End Footer -->
+  </footer>
 
   <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
 
-  <!-- Vendor JS Files -->
   <script src="{% static 'assets/vendor/apexcharts/apexcharts.min.js' %}"></script>
   <script src="{% static 'assets/vendor/bootstrap/js/bootstrap.bundle.min.js' %}"></script>
   <script src="{% static 'assets/vendor/chart.js/chart.umd.js' %}"></script>
@@ -411,8 +433,11 @@
   <script src="{% static 'assets/vendor/tinymce/tinymce.min.js' %}"></script>
   <script src="{% static 'assets/vendor/php-email-form/validate.js' %}"></script>
 
-  <!-- Template Main JS File -->
+  
   <script src="{% static 'assets/js/main.js' %}"></script>
+
+  <script src="{% static 'js/add_new_form.js' %}"></script>
+
 
 </body>
 
