--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -154,7 +154,7 @@
 
             <li class="message-item">
               <a href="#">
-                <img src="{% static 'assets/img/messages-1.jpg' %}" alt="" class="rounded-circle">
+                  <img src="{% static 'assets/img/messages-1.jpg' %}" alt="" class="rounded-circle">
                 <div>
                   <h4>Maria Hudson</h4>
                   <p>Velit asperiores et ducimus soluta repudiandae labore officia est ut...</p>
@@ -206,13 +206,13 @@
 
           <a class="nav-link nav-profile d-flex align-items-center pe-0" href="#" data-bs-toggle="dropdown">
             <img src="{% static 'assets/img/profile-img.jpg' %}" alt="Profile" class="rounded-circle">
-            <span class="d-none d-md-block dropdown-toggle ps-2">V. Muiruri</span>
+            <span class="d-none d-md-block dropdown-toggle ps-2">{{ user.first_name }}</span>
           </a><!-- End Profile Iamge Icon -->
 
           <ul class="dropdown-menu dropdown-menu-end dropdown-menu-arrow profile">
             <li class="dropdown-header">
-              <h6>Jeph Nyamai</h6>
-              <span>Wendanyi Bridge</span>
+              <h6>{{ user.first_name }} {{ user.last_name }}</h6>
+              <!-- <span>Web Designer</span> -->
             </li>
             <li>
               <hr class="dropdown-divider">
@@ -310,6 +310,8 @@
 
       
 
+     
+
       <li class="nav-item">
         <a class="nav-link collapsed" href="/auth/signup">
           <i class="bi bi-card-list"></i>
@@ -330,67 +332,15 @@
     </ul>
 
   </aside><!-- End Sidebar-->
-  <main id="main" class="main">
 
-    <div class="pagetitle">
-      <h1>Projects Data</h1>
-      <nav>
-        <!-- <ol class="breadcrumb">
-          <li class="breadcrumb-item"><a href="/dashboard">Home</a></li>
-          <li class="breadcrumb-item">Tables</li>
-          <li class="breadcrumb-item active">Data</li> -->
-        </ol>
-      </nav>
-    </div><!-- End Page Title -->
+  {% block content %}
 
-    <section class="section">
-      <div class="row">
-        <div class="col-lg-12">
+  {% endblock %}
 
-          <div class="card">
-            <div class="card-body">
-              <h5 class="card-title">ALL PROJECTS</h5>
-              <!-- <p>Add lightweight datatables to your project with using the <a href="https://github.com/fiduswriter/Simple-DataTables" target="_blank">Simple DataTables</a> library. Just add <code>.datatable</code> class name to any table you wish to conver to a datatable. Check for <a href="https://fiduswriter.github.io/simple-datatables/demos/" target="_blank">more examples</a>.</p> -->
-
-              <!-- Table with stripped rows -->
-              <table class="table datatable">
-                <thead>
-                  <tr>
-                    <th>
-                      Project ID
-                    </th>
-                    <th>Contractor</th>
-                    <th>Project Name</th>
-                    <th data-type="date" data-format="YYYY/DD/MM">Deadline</th>
-                    <th>Status</th>
-                  </tr>
-                </thead>
-                <tbody>
-                  {% for project in projects %}
-                  <tr>
-                    <td>{{ project.project_id }}</td>
-                    <td>{{ project.contractor }}</td>
-                    <td>{{ project.project_name }}</td>
-                    <td>{{ project.deadline }}</td>
-                    <td>{{ project.status }}%</td>
-                  </tr>
-                  {% endfor %}
-                </tbody>
-              </table>
-              <!-- End Table with stripped rows -->
-
-            </div>
-          </div>
-
-        </div>
-      </div>
-    </section>
-
-  </main><!-- End #main -->
   <!-- ======= Footer ======= -->
   <footer id="footer" class="footer">
     <div class="copyright">
-      &copy; Copyright <strong><span>Vince Muiruri 2025</span></strong>. All Rights Reserved
+      &copy; Copyright <strong><span>2025</span></strong>. All Rights Reserved
     </div>
    
     
