--- a/main/templates/users-profile.html
+++ b/main/templates/users-profile.html
@@ -375,7 +375,7 @@
                 <li class="nav-item">
                   <button class="nav-link active" data-bs-toggle="tab" data-bs-target="#profile-overview">Overview</button>
                 </li>
-
+                {% if is_me %}
                 <li class="nav-item">
                   <button class="nav-link" data-bs-toggle="tab" data-bs-target="#profile-edit">Edit Profile</button>
                 </li>
@@ -388,30 +388,31 @@
                   <button class="nav-link" data-bs-toggle="tab" data-bs-target="#profile-change-password">Change Password</button>
                 </li>
 
+                {% endif %}
               </ul>
               <div class="tab-content pt-2">
 
                 <div class="tab-pane fade show active profile-overview" id="profile-overview">
                   <h5 class="card-title">About</h5>
-                  <p class="small fst-italic">Wendanyi Footbridge is a crucial pedestrian crossing that enhances connectivity and safety for residents and travelers. Spanning a strategic location, it provides a reliable link over challenging terrain, ensuring accessibility during all seasons. Built with durable materials, it supports local mobility, trade, and community interactions efficiently.</p>
+                  <p class="small fst-italic">{{ contractor.about }}</p>
 
                   <h5 class="card-title">Profile Details</h5>
 
                   <div class="row">
                     <div class="col-lg-3 col-md-4 label ">Full Name</div>
-                    <div class="col-lg-9 col-md-8">Jeph </div>
+                    <div class="col-lg-9 col-md-8">{{ contractor.first_name }} {{ contractor.last_name }} </div>
                   </div>
 
                   <div class="row">
                     <div class="col-lg-3 col-md-4 label">Project Name</div>
-                    <div class="col-lg-9 col-md-8">Wendanyi Bridge</div>
+                    <div class="col-lg-9 col-md-8">{{ contractor.project.project_name }}</div>
                   </div>
 
                   
 
                   <div class="row">
                     <div class="col-lg-3 col-md-4 label">Phone</div>
-                    <div class="col-lg-9 col-md-8">0717748645</div>
+                    <div class="col-lg-9 col-md-8">{{ contractor.phone_number }}</div>
                   </div>
 
                 
@@ -422,7 +423,7 @@
               
              
               <div class="progress mt-3">
-                <div class="progress-bar" role="progressbar" style="width: 40%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">40%</div>
+                <div class="progress-bar" role="progressbar" style="width: {{ contractor.project.status }}%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">{{ contractor.project.status }}%</div>
               </div>
               
              
