--- a/main/templates/addnewform.html
+++ b/main/templates/addnewform.html
@@ -1,444 +1,92 @@
+{% extends 'base.html' %}
 {% load static %}
-<!DOCTYPE html>
-<html lang="en">
 
-<head>
-  <meta charset="utf-8">
-  <meta content="width=device-width, initial-scale=1.0" name="viewport">
+{% block content %}
+<main id="main" class="main">
 
-  <title>Projika</title>
-  <meta content="" name="description">
-  <meta content="" name="keywords">
-
-  <!-- header icons -->
-  <link href="{% static 'assets/img/headericon.png' %}" rel="icon">
-  <link href="{% static 'assets/img/headericon2.png' %}" rel="header-icon">
-
-  <!-- Google Fonts -->
-  <link href="https://fonts.gstatic.com" rel="preconnect">
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Nunito:300,300i,400,400i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
-
- 
-  <link href="{% static 'assets/vendor/bootstrap/css/bootstrap.min.css' %}" rel="stylesheet">
-  <link href="{% static 'assets/vendor/bootstrap-icons/bootstrap-icons.css' %}" rel="stylesheet">
-  <link href="{% static 'assets/vendor/boxicons/css/boxicons.min.css' %}" rel="stylesheet">
-  <link href="{% static 'assets/vendor/quill/quill.snow.css' %}" rel="stylesheet">
-  <link href="{% static 'assets/vendor/quill/quill.bubble.css' %}" rel="stylesheet">
-  <link href="{% static 'assets/vendor/remixicon/remixicon.css' %}" rel="stylesheet">
-  <link href="{% static 'assets/vendor/simple-datatables/style.css' %}" rel="stylesheet">
-
-  
-  <link href="{% static 'assets/css/style.css' %}" rel="stylesheet">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-
-
-</head>
-
-<body>
-
- 
-  <header id="header" class="header fixed-top d-flex align-items-center">
-
-    <div class="d-flex align-items-center justify-content-between">
-      <a href="/dashboard" class="logo d-flex align-items-center">
-        <img src="{% static 'assets/img/logo.png' %}" alt="">
-        
-      </a>
-      <i class="bi bi-list toggle-sidebar-btn"></i>
-    </div><!-- End Logo -->
-
-    <div class="search-bar">
-      <form class="search-form d-flex align-items-center" method="POST" action="#">
-        <input type="text" name="query" placeholder="Search" title="Enter search keyword">
-        <button type="submit" title="Search"><i class="bi bi-search"></i></button>
-      </form>
-    </div><!-- End Search Bar -->
-
-    <nav class="header-nav ms-auto">
-      <ul class="d-flex align-items-center">
-
-        <li class="nav-item d-block d-lg-none">
-          <a class="nav-link nav-icon search-bar-toggle " href="#">
-            <i class="bi bi-search"></i>
-          </a>
-        </li><!-- End Search Icon-->
-
-        <li class="nav-item dropdown">
-
-          <a class="nav-link nav-icon" href="#" data-bs-toggle="dropdown">
-            <i class="bi bi-bell"></i>
-            <span class="badge bg-primary badge-number">4</span>
-          </a><!-- End Notification Icon -->
-
-          <ul class="dropdown-menu dropdown-menu-end dropdown-menu-arrow notifications">
-            <li class="dropdown-header">
-              You have 4 new notifications
-              <a href="#"><span class="badge rounded-pill bg-primary p-2 ms-2">View all</span></a>
-            </li>
-            <li>
-              <hr class="dropdown-divider">
-            </li>
-
-            <li class="notification-item">
-              <i class="bi bi-exclamation-circle text-warning"></i>
-              <div>
-                <h4>Lorem Ipsum</h4>
-                <p>Quae dolorem earum veritatis oditseno</p>
-                <p>30 min. ago</p>
-              </div>
-            </li>
-
-            <li>
-              <hr class="dropdown-divider">
-            </li>
-
-            <li class="notification-item">
-              <i class="bi bi-x-circle text-danger"></i>
-              <div>
-                <h4>Atque rerum nesciunt</h4>
-                <p>Quae dolorem earum veritatis oditseno</p>
-                <p>1 hr. ago</p>
-              </div>
-            </li>
-
-            <li>
-              <hr class="dropdown-divider">
-            </li>
-
-            <li class="notification-item">
-              <i class="bi bi-check-circle text-success"></i>
-              <div>
-                <h4>Sit rerum fuga</h4>
-                <p>Quae dolorem earum veritatis oditseno</p>
-                <p>2 hrs. ago</p>
-              </div>
-            </li>
-
-            <li>
-              <hr class="dropdown-divider">
-            </li>
-
-            <li class="notification-item">
-              <i class="bi bi-info-circle text-primary"></i>
-              <div>
-                <h4>Dicta reprehenderit</h4>
-                <p>Quae dolorem earum veritatis oditseno</p>
-                <p>4 hrs. ago</p>
-              </div>
-            </li>
-
-            <li>
-              <hr class="dropdown-divider">
-            </li>
-            <li class="dropdown-footer">
-              <a href="#">Show all notifications</a>
-            </li>
-
-          </ul><!-- End Notification Dropdown Items -->
-
-        </li><!-- End Notification Nav -->
-
-        <li class="nav-item dropdown">
-
-          <a class="nav-link nav-icon" href="#" data-bs-toggle="dropdown">
-            <i class="bi bi-chat-left-text"></i>
-            <span class="badge bg-success badge-number">3</span>
-          </a><!-- End Messages Icon -->
-
-          <ul class="dropdown-menu dropdown-menu-end dropdown-menu-arrow messages">
-            <li class="dropdown-header">
-              You have 3 new messages
-              <a href="#"><span class="badge rounded-pill bg-primary p-2 ms-2">View all</span></a>
-            </li>
-            <li>
-              <hr class="dropdown-divider">
-            </li>
-
-            <li class="message-item">
-              <a href="#">
-                <img src="{% static 'assets/img/messages-1.jpg' %}" alt="" class="rounded-circle">
-                <div>
-                  <h4>Maria Hudson</h4>
-                  <p>Velit asperiores et ducimus soluta repudiandae labore officia est ut...</p>
-                  <p>4 hrs. ago</p>
-                </div>
-              </a>
-            </li>
-            <li>
-              <hr class="dropdown-divider">
-            </li>
-
-            <li class="message-item">
-              <a href="#">
-                <img src="{% static 'assets/img/messages-2.jpg' %}" alt="" class="rounded-circle">
-                <div>
-                  <h4>Anna Nelson</h4>
-                  <p>Velit asperiores et ducimus soluta repudiandae labore officia est ut...</p>
-                  <p>6 hrs. ago</p>
-                </div>
-              </a>
-            </li>
-            <li>
-              <hr class="dropdown-divider">
-            </li>
-
-            <li class="message-item">
-              <a href="#">
-                <img src="{% static 'assets/img/messages-3.jpg' %} " alt="" class="rounded-circle">
-                <div>
-                  <h4>David Muldon</h4>
-                  <p>Velit asperiores et ducimus soluta repudiandae labore officia est ut...</p>
-                  <p>8 hrs. ago</p>
-                </div>
-              </a>
-            </li>
-            <li>
-              <hr class="dropdown-divider">
-            </li>
-
-            <li class="dropdown-footer">
-              <a href="#">Show all messages</a>
-            </li>
-
-          </ul>
-
-        </li>
-
-        <li class="nav-item dropdown pe-3">
-
-          <a class="nav-link nav-profile d-flex align-items-center pe-0" href="#" data-bs-toggle="dropdown">
-            <img src="{% static 'assets/img/profile-img.jpg' %}" alt="Profile" class="rounded-circle">
-            <span class="d-none d-md-block dropdown-toggle ps-2">K. Anderson</span>
-          </a>
-
-          <ul class="dropdown-menu dropdown-menu-end dropdown-menu-arrow profile">
-            <li class="dropdown-header">
-              <h6>Vince Muiruri</h6>
-              <span>Web Designer</span>
-            </li>
-            <li>
-              <hr class="dropdown-divider">
-            </li>
-
-            <li>
-              <a class="dropdown-item d-flex align-items-center" href="/user/profile">
-                <i class="bi bi-person"></i>
-                <span>My Profile</span>
-              </a>
-            </li>
-            <li>
-              <hr class="dropdown-divider">
-            </li>
-
-            <li>
-              <a class="dropdown-item d-flex align-items-center" href="/user/profilel">
-                <i class="bi bi-gear"></i>
-                <span>Account Settings</span>
-              </a>
-            </li>
-            <li>
-              <hr class="dropdown-divider">
-            </li>
-
-
-            <li>
-              <hr class="dropdown-divider">
-            </li>
-
-            <li>
-              <a class="dropdown-item d-flex align-items-center" href="#">
-                <i class="bi bi-box-arrow-right"></i>
-                <span>Sign Out</span>
-              </a>
-            </li>
-
-          </ul>
-        </li>
-
-      </ul>
+  <div class="pagetitle">
+    <h1>Add Project Phases</h1>
+    <nav>
+      <ol class="breadcrumb">
+        <li class="breadcrumb-item"><a href="/dashboard">Home</a></li>
+       
+      </ol>
     </nav>
+  </div>
+  <section class="section">
+    <div class="row">
+  
 
-  </header>
+      <div class="col-lg-6">
 
-  <aside id="sidebar" class="sidebar">
+        <div class="card">
+          <div class="card-body">
+            
+            
+            <form class="row g-3" method="post" id="add_new-form" novalidate>
+              {% csrf_token %}
+              <div class="col-12">
+                <label for="project_id" class="form-label">Select Project</label>
+                <select class="form-control" name="project_id" id="project_id">
+                  <option value="">-- Select a Project --</option>
+                  {% for project in projects %}
+                  <option value="{{ project.project_id }}">{{ project.project_name }}</option>
+                  {% endfor %}
+                  
+                </select>
+              </div>
+              <div class="col-12">
+                <label for="phase_number" class="form-label">Phase no:</label>
+                <input type="number" name="phase_number"class="form-control" id="phase_number">
+              </div>
+              <div class="col-12">
+                <label for="phase_name" class="form-label">Project Phase</label>
+                <input type="text" name="phase_name" class="form-control" id="phase_name">
+              </div>
+              
+                </select>
+              </div> 
+              
+              <div class="text-center">
+                <button type="submit" class="btn btn-primary  w-100" onclick="showSpinner()" onclick="validateDate()">Submit</button>
 
-    <ul class="sidebar-nav" id="sidebar-nav">
-
-      <li class="nav-item">
-        <a class="nav-link " href="/dashboard">
-          <i class="bi bi-grid"></i>
-          <span>Dashboard</span>
-        </a>
-      </li>
-
-   
-      <li class="nav-item">
-        <a class="nav-link collapsed" data-bs-target="#tables-nav" data-bs-toggle="collapse" href="#">
-          <i class="bi bi-layout-text-window-reverse"></i><span>Projects</span><i class="bi bi-chevron-down ms-auto"></i>
-        </a>
-        <ul id="tables-nav" class="nav-content collapse " data-bs-parent="#sidebar-nav">
+                <div class="d-flex justify-content-center align-items-center">
+                
+                  <div id="spinner" class="spinner-border text-primary d-none ms-3" role="status">
+                   
+                      <span class="visually-hidden">Loading...</span>
+                  </div>
+              </div>
+                <button type="reset" class="btn btn-primary w-100" type="submit" style="margin-top: 20px;background-color: grey;border-color: grey;" onclick="hideSpinner()">Reset</button>
+                
+              </div>
+              
         
-         
-          <li>
-            <a href="/projects/view">
-              <i class="bi bi-circle"></i><span>Ongoing Projects</span>
-            </a>
-          </li>
-          <li>
-            <a href="/project/add">
-              <i class="bi bi-circle"></i><span>Add Project steps</span>
-            </a>
-          </li>
-        </ul>
-      </li>
+            <script>
+                function showSpinner() {
+                    document.getElementById("spinner").classList.remove("d-none");
+                }
+                function hideSpinner() {
+                    document.getElementById("spinner").classList.add("d-none");
+                }
+            </script>
+              </div>
 
-   
+                
+              </div>
+            </form>
 
-
-      <li class="nav-heading">Pages</li>
-
-      <li class="nav-item">
-        <a class="nav-link collapsed" href="/user/profile">
-          <i class="bi bi-person"></i>
-          <span>Profile</span>
-        </a>
-      </li>
+          </div>
+        </div>
 
       
 
+     
 
-      <li class="nav-item">
-        <a class="nav-link collapsed" href="auth/signup">
-          <i class="bi bi-card-list"></i>
-          <span>Register</span>
-        </a>
-      </li>
-
-      <li class="nav-item">
-        <a class="nav-link collapsed" href="/auth/login">
-          <i class="bi bi-box-arrow-in-right"></i>
-          <span>Login</span>
-        </a>
-      </li>
-
-    
-
-
-    </ul>
-
-  </aside>
-  <main id="main" class="main">
-
-    <div class="pagetitle">
-      <h1>Add Project Phases</h1>
-      <nav>
-        <ol class="breadcrumb">
-          <li class="breadcrumb-item"><a href="/dashboard">Home</a></li>
-         
-        </ol>
-      </nav>
-    </div>
-    <section class="section">
-      <div class="row">
-    
-
-        <div class="col-lg-6">
-
-          <div class="card">
-            <div class="card-body">
-              
-              
-              <form class="row g-3" method="post" id="add_new-form" novalidate>
-                {% csrf_token %}
-                <div class="col-12">
-                  <label for="project_id" class="form-label">Select Project</label>
-                  <select class="form-control" name="project_id" id="project_id">
-                    <option value="">-- Select a Project --</option>
-                    {% for project in projects %}
-                    <option value="{{ project.project_id }}">{{ project.project_name }}</option>
-                    {% endfor %}
-                    
-                  </select>
-                </div>
-                <div class="col-12">
-                  <label for="phase_number" class="form-label">Phase no:</label>
-                  <input type="number" name="phase_number"class="form-control" id="phase_number">
-                </div>
-                <div class="col-12">
-                  <label for="phase_name" class="form-label">Project Phase</label>
-                  <input type="text" name="phase_name" class="form-control" id="phase_name">
-                </div>
-                
-                  </select>
-                </div> 
-                
-                <div class="text-center">
-                  <button type="submit" class="btn btn-primary  w-100" onclick="showSpinner()" onclick="validateDate()">Submit</button>
-
-                  <div class="d-flex justify-content-center align-items-center">
-                  
-                    <div id="spinner" class="spinner-border text-primary d-none ms-3" role="status">
-                     
-                        <span class="visually-hidden">Loading...</span>
-                    </div>
-                </div>
-                  <button type="reset" class="btn btn-primary w-100" type="submit" style="margin-top: 20px;background-color: grey;border-color: grey;" onclick="hideSpinner()">Reset</button>
-                  
-                </div>
-                
-          
-              <script>
-                  function showSpinner() {
-                      document.getElementById("spinner").classList.remove("d-none");
-                  }
-                  function hideSpinner() {
-                      document.getElementById("spinner").classList.add("d-none");
-                  }
-              </script>
-                </div>
-
-                  
-                </div>
-              </form>
-
-            </div>
-          </div>
-
-        
-
-       
-
-        </div>
       </div>
-    </section>
-
-  </main>
-
-  <footer id="footer" class="footer">
-    <div class="copyright">
-      &copy; Copyright <strong><span>vince muiruri 2025</span></strong>. All Rights Reserved
     </div>
-   
-    
-  </footer>
+  </section>
 
-  <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
-
-  <script src="{% static 'assets/vendor/apexcharts/apexcharts.min.js' %}"></script>
-  <script src="{% static 'assets/vendor/bootstrap/js/bootstrap.bundle.min.js' %}"></script>
-  <script src="{% static 'assets/vendor/chart.js/chart.umd.js' %}"></script>
-  <script src="{% static 'assets/vendor/echarts/echarts.min.js' %}"></script>
-  <script src="{% static 'assets/vendor/quill/quill.js' %}"></script>
-  <script src="{% static 'assets/vendor/simple-datatables/simple-datatables.js' %}"></script>
-  <script src="{% static 'assets/vendor/tinymce/tinymce.min.js' %}"></script>
-  <script src="{% static 'assets/vendor/php-email-form/validate.js' %}"></script>
-
-  
-  <script src="{% static 'assets/js/main.js' %}"></script>
-
-  <script src="{% static 'js/add_new_form.js' %}"></script>
-
-
-</body>
-
-</html>
+</main>
+<script src="{% static 'js/add_new_form.js' %}"></script>
+{% endblock %}
