--- a/main/templates/contractors.html
+++ b/main/templates/contractors.html
@@ -1,127 +1,77 @@
+{% extends 'base.html' %}
 {% load static %}
-  <!DOCTYPE html>
-<html lang="en">
 
-<head>
-  <meta charset="utf-8">
-  <meta content="width=device-width, initial-scale=1.0" name="viewport">
-
-  <title>Projika</title>
-  <meta content="" name="description">
-  <meta content="" name="keywords">
-
-  <link href="{% static 'assets/img/favicon.png' %}" rel="icon">
-  <link href="{% static 'assets/img/apple-touch-icon.png' %}" rel="apple-touch-icon">
-
-  <link href="https://fonts.gstatic.com" rel="preconnect">
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Nunito:300,300i,400,400i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
-
- 
-  <link href="{% static 'assets/vendor/bootstrap/css/bootstrap.min.css' %}" rel="stylesheet">
-  <link href="{% static 'assets/vendor/bootstrap-icons/bootstrap-icons.css' %}" rel="stylesheet">
-  <link href="{% static 'assets/vendor/boxicons/css/boxicons.min.css' %}" rel="stylesheet">
-  <link href="{% static 'assets/vendor/quill/quill.snow.css' %}" rel="stylesheet">
-  <link href="{% static 'assets/vendor/quill/quill.bubble.css' %}" rel="stylesheet">
-  <link href="{% static 'assets/vendor/remixicon/remixicon.css' %}" rel="stylesheet">
-  <link href="{% static 'assets/vendor/simple-datatables/style.css' %}" rel="stylesheet">
-
-  <link href="{% static 'assets/css/style.css' %}" rel="stylesheet">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-
-
-
-</head>
-
-<body>
-
-  <main>
-    <div class="container" style="max-width:1000px;">
-    
-     <div class="col-lg">
-         
-              <div class="d-flex justify-content-center py-4">
-                <a href="/dashboard" class="logo d-flex align-items-center w-auto">
-                  <img src="{% static 'assets/img/logo.png' %}" alt="">
-                  
-                </a>
-              </div>      
-        
-      
-              <div class="card-body">
-              <h5 class="card-title">Project Name: Kapiti flats</h5>
-              <h5 class="card-title">Project Milestone</h5>
-              
-              <form method="post" id="contractors-form" novalidate>
-                {% csrf_token %}
-                <div class="row mb-3">
-                  <label class="col-sm-2 col-form-label">Project</label>
-                  <div class="col-sm-10">
-                    <select class="form-select" name="project_id" id="project_id" aria-label="Default select example">
-                    <option selected value="{{ project.project_id }}">{{ project.project_name }}</option>
-                    </select>
-                  </div>
-                </div>
-              <div class="row mb-3">
-                  <label class="col-sm-2 col-form-label">Project Phase</label>
-                  <div class="col-sm-10">
-                    <select class="form-select" name="phase_number" id="phase_number" aria-label="Default select example">
-                    <option selected value="">...Select phase...</option>
-                      {% for phase in phases %}
-                      <option value="{{ phase.phase_number }}">{{ phase.phase_name }}</option>
-                      {% endfor %}
-                    </select>
-                  </div>
-                </div>
-              </div>
-              <div class="row mb-3">
-                <label for="comment" class="col-sm-2 col-form-label">Comments</label>
-                <div class="col-sm-10">
-                  <textarea class="form-control" name="comment" id="comment" style="height: 100px"></textarea>
-                </div>
-              </div>
-                <div class="row mb-3">
-                  <label for="image" class="col-sm-2 col-form-label">File Upload</label>
-                  <div class="col-sm-10">
-                    <input class="form-control" name="image" type="file" id="image">
-                  </div>
-                </div>
+{% block content %}
+<main>
+  <div class="container" style="max-width:1000px;">
+  
+   <div class="col-lg">
+       
+            <!-- <div class="d-flex justify-content-center py-4">
+              <a href="/dashboard" class="logo d-flex align-items-center w-auto">
+                <img src="{% static 'assets/img/logo.png' %}" alt="">
                 
-
-                <div class="row mb-3">
-                  <label class="col-sm-2 col-form-label"></label>
-                  <div class="col-sm-10">
-                    <button type="submit" class="btn btn-primary">Submit Form</button>
-                  </div>
-                </div>
-
-              </form>
-
-            </div>
- 
-
-   
-          </div>
-    </div>
-    </div>
+              </a>
+            </div>       -->
+      
     
-  </main>
+            <div class="card-body">
+            <h5 class="card-title">Project Name: Kapiti flats</h5>
+            <h5 class="card-title">Project Milestone</h5>
+            
+            <form method="post" id="contractors-form" novalidate>
+              {% csrf_token %}
+              <div class="row mb-3">
+                <label class="col-sm-2 col-form-label">Project</label>
+                <div class="col-sm-10">
+                  <select class="form-select" name="project_id" id="project_id" aria-label="Default select example">
+                  <option selected value="{{ project.project_id }}">{{ project.project_name }}</option>
+                  </select>
+                </div>
+              </div>
+            <div class="row mb-3">
+                <label class="col-sm-2 col-form-label">Project Phase</label>
+                <div class="col-sm-10">
+                  <select class="form-select" name="phase_number" id="phase_number" aria-label="Default select example">
+                  <option selected value="">...Select phase...</option>
+                    {% for phase in phases %}
+                    <option value="{{ phase.phase_number }}">{{ phase.phase_name }}</option>
+                    {% endfor %}
+                  </select>
+                </div>
+              </div>
+            </div>
+            <div class="row mb-3">
+              <label for="comment" class="col-sm-2 col-form-label">Comments</label>
+              <div class="col-sm-10">
+                <textarea class="form-control" name="comment" id="comment" style="height: 100px"></textarea>
+              </div>
+            </div>
+              <div class="row mb-3">
+                <label for="image" class="col-sm-2 col-form-label">File Upload</label>
+                <div class="col-sm-10">
+                  <input class="form-control" name="image" type="file" id="image">
+                </div>
+              </div>
+              
 
-  <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
+              <div class="row mb-3">
+                <label class="col-sm-2 col-form-label"></label>
+                <div class="col-sm-10">
+                  <button type="submit" class="btn btn-primary">Submit Form</button>
+                </div>
+              </div>
 
+            </form>
+
+          </div>
+
+
+ 
+        </div>
+  </div>
+  </div>
   
-  <script src="{% static 'assets/vendor/apexcharts/apexcharts.min.js' %}"></script>
-  <script src="{% static 'assets/vendor/bootstrap/js/bootstrap.bundle.min.js' %}"></script>
-  <script src="{% static 'assets/vendor/chart.js/chart.umd.js' %}"></script>
-  <script src="{% static 'assets/vendor/echarts/echarts.min.js' %}"></script>
-  <script src="{% static 'assets/vendor/quill/quill.js' %}"></script>
-  <script src="{% static 'assets/vendor/simple-datatables/simple-datatables.js' %}"></script>
-  <script src="{% static 'assets/vendor/tinymce/tinymce.min.js' %}"></script>
-  <script src="{% static 'assets/vendor/php-email-form/validate.js' %}"></script>
-  
-  <script src="{% static 'assets/js/main.js' %}"></script>
-  <script src="{% static 'js/contractors.js' %}"></script>
-
-
-</body>
-
-</html>
+</main>
+<script src="{% static 'js/contractors.js' %}"></script>
+{% endblock %}
