--- a/main/templates/pages-login.html
+++ b/main/templates/pages-login.html
@@ -99,9 +99,12 @@
                     </div>
                     
               
-                  <script>
+                    <script>
                       function showSpinner() {
                           document.getElementById("spinner").classList.remove("d-none");
+                      }
+                      function hideSpinner() {
+                          document.getElementById("spinner").classList.add("d-none");
                       }
                   </script>
                                 
